# data-juicer

./: .gitignore  hatch_build.py  pyproject.toml
.pre-commit-hooks/: build_op_doc.py
data_juicer/config/: config.py  config_all.yaml  recipe_llm_semantic.yaml
data_juicer/core/: exporter.py
data_juicer/core/data/: ray_dataset.py
data_juicer/format/: json_formatter.py
data_juicer/ops/filter/: __init__.py  llm_analysis_filter.py  llm_condition_filter.py  llm_quality_score_filter.py
data_juicer/ops/mapper/: __init__.py  agent_bad_case_signal_mapper.py  agent_dialog_normalize_mapper.py  agent_skill_insight_mapper.py  agent_tool_type_mapper.py  dialog_intent_detection_mapper.py  dialog_llm_input_utils.py  dialog_sentiment_detection_mapper.py  dialog_sentiment_intensity_mapper.py  dialog_topic_detection_mapper.py  llm_extract_mapper.py  pii_redaction_mapper.py  tool_success_tagger_mapper.py  usage_counter_mapper.py  video_camera_pose_mapper.py
data_juicer/utils/: constant.py  datasets_json_compat.py  jsonl_lenient_loader.py  llm_semantic_ops.py  llm_structured_ops.py  model_utils.py
demos/agent/: BAD_CASE_INSIGHTS.md  BAD_CASE_REPORT.md  PERFORMANCE_LLM.md  agent_interaction_quality_analysis.yaml
demos/agent/minimal_configs/: 01_normalize_only.yaml  02_normalize_pii.yaml  03_clean.yaml  04_usage_tool.yaml  05_filters.yaml  06_one_dialog_mapper.yaml  07_entity_keyword.yaml  08_one_llm_filter.yaml  README.md
demos/agent/scripts/: bad_case_signal_support.py  generate_bad_case_report.py  run_bad_case_pipeline.sh
docs/: DatasetCfg.md  DatasetCfg_ZH.md  Operators.md
docs/operators/filter/: llm_condition_filter.md
docs/operators/mapper/: llm_extract_mapper.md
docs/recipes/: agent_interaction_quality_analysis.yaml
tests/ops/filter/: test_llm_analysis_filter_parse_output.py  test_llm_condition_filter.py
tests/ops/mapper/: test_agent_dialog_normalize_mapper.py  test_llm_extract_mapper.py
tests/utils/: test_jsonl_lenient_loader.py  test_llm_semantic_ops.py  test_model_utils.py
